dataset1235/2025-2/610742602/users/1606503414/executions/906907063_3530285078.log
== RUN (2025-08-19 21:45:26)
-- CODE: 
string = "Augusto Ada Bryron, a Condessa de Lovelace, nasceu em 1885, na Inglaterra."
print(string.lower())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusto ada bryron, a condessa de lovelace, nasceu em 1885, na inglaterra.
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusto ada bryron, a condessa de lovelace, nasceu em 1885, na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:47:09)
-- CODE: 
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(string.lower())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:45:41)
-- CODE: 
string = "Augusto Ada Byron, a Condessa de Lovelace, nasceu em 1885, na Inglaterra."
print(string.lower())
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusto ada byron, a condessa de lovelace, nasceu em 1885, na inglaterra.
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusto ada byron, a condessa de lovelace, nasceu em 1885, na inglaterra.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:46:22)
-- CODE: 
string = "Augusto Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(string.lower())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusto ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusto ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:46:24)
-- CODE: 
string = "Augusto Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(string.lower())
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusto ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusto ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:44:30)
-- CODE: 
string = "Augusto Ada Bryron, a Condessa de Lovelace, nasceu em 1885, na Inclaterra."
print(string.lower())
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusto ada bryron, a condessa de lovelace, nasceu em 1885, na inclaterra.
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusto ada bryron, a condessa de lovelace, nasceu em 1885, na inclaterra.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:45:14)
-- CODE: 
string = "Augusto Ada Bryron, a Condessa de Lovelace, nasceu em 1885, na Inglaterra."
print(string.lower())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusto ada bryron, a condessa de lovelace, nasceu em 1885, na inglaterra.
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusto ada bryron, a condessa de lovelace, nasceu em 1885, na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:43:57)
-- CODE: 
string = "Augusto Ada Bryron, a Condessa de Lovelace, nasceu em 1885, na Inclaterra."
print(string.lower())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusto ada bryron, a condessa de lovelace, nasceu em 1885, na inclaterra.
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusto ada bryron, a condessa de lovelace, nasceu em 1885, na inclaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:46:31)
-- CODE: 
string = "Augusto Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(string.lower())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusto ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusto ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:47:10)
-- CODE: 
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(string.lower())
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:45:40)
-- CODE: 
string = "Augusto Ada Byron, a Condessa de Lovelace, nasceu em 1885, na Inglaterra."
print(string.lower())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusto ada byron, a condessa de lovelace, nasceu em 1885, na inglaterra.
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusto ada byron, a condessa de lovelace, nasceu em 1885, na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:43:43)
-- CODE: 
string = "Augusto Ada Bryron, a Condessa de Lovelace, nasceu em 1885, na Inclaterra."
print(string.lower())
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusto ada bryron, a condessa de lovelace, nasceu em 1885, na inclaterra.
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusto ada bryron, a condessa de lovelace, nasceu em 1885, na inclaterra.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:43:03)
-- CODE: 
string = "Augusto Ada Bryron, a Condessa de Lovelace, nasceu em 1885, na Inclaterra."
print(string.???)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
File "XXXX", line 2
    print(string.???)
                 ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- ERROR:
File "XXXX", line 2
    print(string.???)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:45:45)
-- CODE: 
string = "Augusto Ada Byron, a Condessa de Lovelace, nasceu em 1885, na Inglaterra."
print(string.lower())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusto ada byron, a condessa de lovelace, nasceu em 1885, na inglaterra.
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusto ada byron, a condessa de lovelace, nasceu em 1885, na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:45:16)
-- CODE: 
string = "Augusto Ada Bryron, a Condessa de Lovelace, nasceu em 1885, na Inglaterra."
print(string.lower())
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusto ada bryron, a condessa de lovelace, nasceu em 1885, na inglaterra.
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusto ada bryron, a condessa de lovelace, nasceu em 1885, na inglaterra.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:44:34)
-- CODE: 
string = "Augusto Ada Bryron, a Condessa de Lovelace, nasceu em 1885, na Inclaterra."
print(string.lower())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusto ada bryron, a condessa de lovelace, nasceu em 1885, na inclaterra.
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusto ada bryron, a condessa de lovelace, nasceu em 1885, na inclaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:43:41)
-- CODE: 
string = "Augusto Ada Bryron, a Condessa de Lovelace, nasceu em 1885, na Inclaterra."
print(string.lower())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusto ada bryron, a condessa de lovelace, nasceu em 1885, na inclaterra.
-- TEST CASE 2:
---- input:
xx
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusto ada bryron, a condessa de lovelace, nasceu em 1885, na inclaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
